--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,10 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 
+# dotenv
+# TODO Comment out this rule if environment variables can be committed
+.env
+
 ## Environment normalization:
 /.bundle
 /vendor/bundle
@@ -110,6 +114,19 @@ bower.json
 
 # sftp configuration file
 sftp-config.json
+
+# Package control specific files
+Package Control.last-run
+Package Control.ca-list
+Package Control.ca-bundle
+Package Control.system-ca-bundle
+Package Control.cache/
+Package Control.ca-certs/
+bh_unicode_properties.cache
+
+# Sublime-github package stores a github token in this file
+# https://packagecontrol.io/packages/sublime-github
+GitHub.sublime-settings
 
 
 ### Vim ###
@@ -192,7 +209,7 @@ fabric.properties
 
 
 ### OSX ###
-.DS_Store
+*.DS_Store
 .AppleDouble
 .LSOverride
 
