curl -s https://www.gitignore.io/api/ruby%2Crails%2Csublimetext%2Cvim%2Cjetbrains%2Clinux%2Cosx%2Cwindows > .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -69,9 +69,11 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
-# TODO Comment out these rules if you are OK with secrets being uploaded to the repo
+# TODO Comment out this rule if you are OK with secrets being uploaded to the repo
 config/initializers/secret_token.rb
-config/secrets.yml
+
+# Only include if you have production secrets in this file, which is no longer a Rails default
+# config/secrets.yml
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
@@ -193,6 +195,8 @@ fabric.properties
 
 # *.iml
 # modules.xml
+# .idea/misc.xml 
+# *.ipr
 
 
 ### Linux ###
@@ -214,7 +218,8 @@ fabric.properties
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -255,4 +260,3 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
-
