--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,6 @@ build-iPhoneSimulator/
 
 
 ### Rails ###
-*.rbc
 capybara-*.html
 .rspec
 /log
@@ -63,7 +62,6 @@ capybara-*.html
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /public/system
-/coverage/
 /spec/tmp
 **.orig
 rerun.txt
@@ -81,13 +79,11 @@ config/initializers/secret_token.rb
 
 ## Environment normalization:
 /.bundle
-/vendor/bundle
 
 # these should all be checked in to normalize the environment:
 # Gemfile.lock, .ruby-version, .ruby-gemset
 
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
-.rvmrc
 
 # if using bower-rails ignore default bower_components path bower.json files
 /vendor/assets/bower_components
@@ -151,9 +147,6 @@ tags
 # User-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
 
 # Sensitive or high-churn files:
 .idea/dataSources.ids
@@ -200,7 +193,6 @@ fabric.properties
 
 
 ### Linux ###
-*~
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
@@ -211,6 +203,9 @@ fabric.properties
 # Linux trash folder which might appear on any partition or disk
 .Trash-*
 
+# .nfs files are created when an open file is removed but is still being accessed
+.nfs*
+
 
 ### OSX ###
 *.DS_Store
@@ -219,11 +214,8 @@ fabric.properties
 
 # Icon must end with two \r
 Icon
-
-
 # Thumbnails
 ._*
-
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
@@ -232,7 +224,6 @@ Icon
 .Trashes
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
-
 # Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
