:shirt: Add some rubocop settings

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,3 +5,17 @@ AllCops:
 
 Rails:
   Enabled: true
+
+#################### Style #################################
+
+Style/TrailingCommaInArguments:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInLiteral:
+  EnforcedStyleForMultiline: comma
+
+#################### Metrics ###############################
+
+Metrics/LineLength:
+  Exclude:
+    - Gemfile
