--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,7 @@
 AllCops:
   Exclude:
     - db/schema.rb
+    - vendor/**/*
   DefaultFormatter: fuubar
   DisplayCopNames: true
   DisplayStyleGuide: true
