:shell: curl -sL https://www.gitignore.io/api/ruby,rails,sublimetext,vim,visualstudiocode,jetbrains,linux,osx,windows > .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/ruby,rails,sublimetext,vim,jetbrains,linux,osx,windows
+# Created by https://www.gitignore.io/api/ruby,rails,sublimetext,vim,visualstudiocode,jetbrains,linux,osx,windows
 
 ### JetBrains ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
@@ -45,6 +45,9 @@ atlassian-ide-plugin.xml
 
 # Cursive Clojure plugin
 .idea/replstate.xml
+
+# Ruby plugin and RubyMine
+/.rakeTasks
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
@@ -244,6 +247,14 @@ Session.vim
 # auto-generated tag files
 tags
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history
+
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -265,4 +276,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/ruby,rails,sublimetext,vim,jetbrains,linux,osx,windows
+# End of https://www.gitignore.io/api/ruby,rails,sublimetext,vim,visualstudiocode,jetbrains,linux,osx,windows
