:+1: Add settings to .rubocop.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
   DefaultFormatter: fuubar
   DisplayCopNames: true
   DisplayStyleGuide: true
+  ExtraDetails: true
 
 Rails:
   Enabled: true
