--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,4 @@
+---
 AllCops:
   Exclude:
     - db/schema.rb
@@ -15,7 +16,10 @@ Rails:
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
 
-Style/TrailingCommaInLiteral:
+Style/TrailingCommaInArrayLiteral:
+  EnforcedStyleForMultiline: comma
+
+Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
 
 #################### Metrics ###############################
