--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,7 +11,24 @@ AllCops:
 Rails:
   Enabled: true
 
+#################### Layout ################################
+
+Layout/AlignHash:
+  EnforcedHashRocketStyle: table
+  EnforcedColonStyle: table
+
 #################### Style #################################
+
+Style/ClassAndModuleChildren:
+  AutoCorrect: true
+
+Style/Documentation:
+  Enabled: false
+
+Style/MixinUsage:
+  Exclude:
+    - bin/setup
+    - bin/update
 
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
@@ -24,6 +41,35 @@ Style/TrailingCommaInHashLiteral:
 
 #################### Metrics ###############################
 
+Metrics/BlockLength:
+  Exclude:
+    - lib/tasks/auto_annotate_models.rake  # for annotate
+
 Metrics/LineLength:
   Exclude:
     - Gemfile
+    - Rakefile
+    - config/application.rb
+    - config/environments/**/*
+    - config/initializers/**/*
+    - config/puma.rb
+    - spec/rails_helper.rb
+    - spec/spec_helper.rb
+
+#################### Bundler ###############################
+
+Bundler/OrderedGems:
+  Enabled: false
+
+#################### Rails #################################
+
+Rails/UnknownEnv:
+  Environments:
+    - development
+    - test
+    - edge
+    - staging
+    - production
+
+#################### RSpec #################################
+require: rubocop-rspec
