--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,7 +13,7 @@ Rails:
 
 #################### Layout ################################
 
-Layout/AlignHash:
+Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
 
