--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,34 +1,20 @@
 ---
+require:
+  - rubocop-performance
+
 AllCops:
-  Exclude:
-    - db/schema.rb
-    - vendor/**/*
   DefaultFormatter: fuubar
-  DisplayCopNames: true
   DisplayStyleGuide: true
   ExtraDetails: true
+  NewCops: enable
 
-Rails:
-  Enabled: true
-
-#################### Layout ################################
+#################### Layout ###########################
 
 Layout/HashAlignment:
   EnforcedHashRocketStyle: table
   EnforcedColonStyle: table
 
-#################### Style #################################
-
-Style/ClassAndModuleChildren:
-  AutoCorrect: true
-
-Style/Documentation:
-  Enabled: false
-
-Style/MixinUsage:
-  Exclude:
-    - bin/setup
-    - bin/update
+#################### Style ###############################
 
 Style/TrailingCommaInArguments:
   EnforcedStyleForMultiline: comma
@@ -38,38 +24,3 @@ Style/TrailingCommaInArrayLiteral:
 
 Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: comma
-
-#################### Metrics ###############################
-
-Metrics/BlockLength:
-  Exclude:
-    - lib/tasks/auto_annotate_models.rake  # for annotate
-
-Metrics/LineLength:
-  Exclude:
-    - Gemfile
-    - Rakefile
-    - config/application.rb
-    - config/environments/**/*
-    - config/initializers/**/*
-    - config/puma.rb
-    - spec/rails_helper.rb
-    - spec/spec_helper.rb
-
-#################### Bundler ###############################
-
-Bundler/OrderedGems:
-  Enabled: false
-
-#################### Rails #################################
-
-Rails/UnknownEnv:
-  Environments:
-    - development
-    - test
-    - edge
-    - staging
-    - production
-
-#################### RSpec #################################
-require: rubocop-rspec
