🐚 (chore): sh -c 'curl -sL https://www.gitignore.io/api/ruby,rails,sublimetext,vim,visualstudiocode,jetbrains+all,linux,osx,windows > .gitignore'

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 .idea/**/dictionaries
 .idea/**/shelf
 
+# AWS User-specific
+.idea/**/aws.xml
+
 # Generated files
 .idea/**/contentModel.xml
 
@@ -203,6 +206,7 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+/public/uploads
 
 ### Ruby ###
 *.gem
@@ -270,6 +274,7 @@ build-iPhoneSimulator/
 
 # SFTP configuration file
 sftp-config.json
+sftp-config-alt*.json
 
 # Package control specific files
 Package Control.last-run
@@ -314,6 +319,9 @@ tags
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+
+# Local History for Visual Studio Code
+.history/
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
