⬆️ (chore): Update PostgreSQL version 13.3 to 14.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 
 services:
   db:
-    image: postgres:13.3-alpine
+    image: postgres:14.2-alpine3.15
     ports:
       - 5432:5432
     volumes:
