--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - .:/usr/src/app:cached
-      - bundle-data:/bundle:delegated
+      - bundle-data:/usr/local/bundle:delegated
     command: bundle exec rails s -p 3000 -b 0.0.0.0
     ports:
       - 3000:3000
