--- a/compose.yml
+++ b/compose.yml
@@ -12,7 +12,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: bundle exec rails s -p 3000 -b 0.0.0.0
+    command: bin/rails server --binding=0.0.0.0
     ports:
       - 3000:3000
     volumes:
@@ -26,7 +26,7 @@ services:
       - db
   dev:
     <<: *app
-    command: bundle exec spring server
+    command: bin/spring server
     ports:
       - 35729:35729
 
