--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - db-data:/var/lib/postgresql/data:delegated
+      - db-data:/var/lib/postgresql/data
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
   app: &app
@@ -16,8 +16,8 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - .:/usr/src/app:cached
-      - bundle-data:/usr/local/bundle:delegated
+      - .:/usr/src/app
+      - bundle-data:/usr/local/bundle
     stdin_open: true
     tty: true
     environment:
