--- a/compose.yml
+++ b/compose.yml
@@ -8,7 +8,7 @@ services:
       - db-data:/var/lib/postgresql/data
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
-  app: &app
+  web: &app
     build:
       context: .
       dockerfile: ./Dockerfile
