🔨 chore(compose): Add `RUBOCOP_OPTS=--server` option

--- a/compose.yml
+++ b/compose.yml
@@ -13,6 +13,7 @@ x-app: &app
   tty: true
   environment:
     EDITOR: vi
+    RUBOCOP_OPTS: --server
     RUBYOPT: -W:deprecated
   depends_on:
     - db
